--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: "3.8"
 services:
     bot:
-        image: "count_start_redis_bot:latest"
+        image: "alexnemynov/count_start_redis_bot:latest"
         restart: "unless-stopped"    
         env_file: ".env"
         # Дополнительно укажем, что бот должен запускаться 
